fix theme select align bug

--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -246,6 +246,8 @@ h1.sui-page-header:before {
 #themes-select ul {
   padding: 0 0 8px 8px;
   min-width: 85px;
+  left: auto;
+  right: 0;
 }
 #themes-select li {
   float: left;
